backend/app/parser/docker/backend/grammar/dkParser.py
# Generated from ./backend/grammar/dk.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dkParser ( Parser ):

    grammarFileName = "dk.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'@'", "'s'", "'ms'", "'m'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'--chown'", "'--chmod'", "'--platform'", "'--interval'", 
                     "'--timeout'", "'--start-period'", "'--retries'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'='", "','", "'#'", "'/'", "'*'", "'$'", 
                     "'.'", "'-'", "'_'", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "FROM", "RUN", "CMD", "LABEL", 
                      "MAINTAINER", "EXPOSE", "ENV", "ADD", "COPY", "ENTRYPOINT", 
                      "VOLUME", "USER", "WORKDIR", "ARG", "ONBUILD", "STOPSIGNAL", 
                      "HEALTHCHECK", "SHELL", "NONE", "AS", "NAME", "CHOWN", 
                      "CHMOD", "PLATFORM", "INTERVAL", "TIMEOUT", "START_PERIOD", 
                      "RETRIES", "COMMENT", "NEWLINE", "WORD", "INTEGER", 
                      "QUOTED_STRING", "LBRACKET", "RBRACKET", "EQ", "COMMA", 
                      "HASH", "RSLASH", "ASTERISK", "DOLLAR", "POINT", "MINUS", 
                      "UNDERSCORE", "TILDE", "ANY_CHAR_EXCEPT_NEWLINE", 
                      "WS", "LINE_CONTINUATION" ]

    RULE_dockerfile = 0
    RULE_instruction = 1
    RULE_from = 2
    RULE_run = 3
    RULE_cmd = 4
    RULE_label = 5
    RULE_maintainer = 6
    RULE_expose = 7
    RULE_env = 8
    RULE_add = 9
    RULE_copy = 10
    RULE_entrypoint = 11
    RULE_volume = 12
    RULE_user = 13
    RULE_workdir = 14
    RULE_arg = 15
    RULE_onbuild = 16
    RULE_stopsignal = 17
    RULE_healthcheck = 18
    RULE_shell = 19
    RULE_platform_opt = 20
    RULE_as_opt = 21
    RULE_name_opt = 22
    RULE_param_opt = 23
    RULE_image_spec = 24
    RULE_label_pair = 25
    RULE_env_pair = 26
    RULE_env_single = 27
    RULE_path_spec = 28
    RULE_shell_command_paths = 29
    RULE_json_command = 30
    RULE_json_array = 31
    RULE_shell_command = 32
    RULE_health_none = 33
    RULE_health_cmd = 34
    RULE_options_opt = 35

    ruleNames =  [ "dockerfile", "instruction", "from", "run", "cmd", "label", 
                   "maintainer", "expose", "env", "add", "copy", "entrypoint", 
                   "volume", "user", "workdir", "arg", "onbuild", "stopsignal", 
                   "healthcheck", "shell", "platform_opt", "as_opt", "name_opt", 
                   "param_opt", "image_spec", "label_pair", "env_pair", 
                   "env_single", "path_spec", "shell_command_paths", "json_command", 
                   "json_array", "shell_command", "health_none", "health_cmd", 
                   "options_opt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    FROM=6
    RUN=7
    CMD=8
    LABEL=9
    MAINTAINER=10
    EXPOSE=11
    ENV=12
    ADD=13
    COPY=14
    ENTRYPOINT=15
    VOLUME=16
    USER=17
    WORKDIR=18
    ARG=19
    ONBUILD=20
    STOPSIGNAL=21
    HEALTHCHECK=22
    SHELL=23
    NONE=24
    AS=25
    NAME=26
    CHOWN=27
    CHMOD=28
    PLATFORM=29
    INTERVAL=30
    TIMEOUT=31
    START_PERIOD=32
    RETRIES=33
    COMMENT=34
    NEWLINE=35
    WORD=36
    INTEGER=37
    QUOTED_STRING=38
    LBRACKET=39
    RBRACKET=40
    EQ=41
    COMMA=42
    HASH=43
    RSLASH=44
    ASTERISK=45
    DOLLAR=46
    POINT=47
    MINUS=48
    UNDERSCORE=49
    TILDE=50
    ANY_CHAR_EXCEPT_NEWLINE=51
    WS=52
    LINE_CONTINUATION=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DockerfileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(dkParser.EOF, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dkParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dkParser.InstructionContext,i)


        def getRuleIndex(self):
            return dkParser.RULE_dockerfile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDockerfile" ):
                listener.enterDockerfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDockerfile" ):
                listener.exitDockerfile(self)




    def dockerfile(self):

        localctx = dkParser.DockerfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dockerfile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 51556384704) != 0):
                self.state = 72
                self.instruction()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(dkParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(dkParser.NEWLINE, 0)

        def from_(self):
            return self.getTypedRuleContext(dkParser.FromContext,0)


        def run(self):
            return self.getTypedRuleContext(dkParser.RunContext,0)


        def cmd(self):
            return self.getTypedRuleContext(dkParser.CmdContext,0)


        def label(self):
            return self.getTypedRuleContext(dkParser.LabelContext,0)


        def maintainer(self):
            return self.getTypedRuleContext(dkParser.MaintainerContext,0)


        def expose(self):
            return self.getTypedRuleContext(dkParser.ExposeContext,0)


        def env(self):
            return self.getTypedRuleContext(dkParser.EnvContext,0)


        def add(self):
            return self.getTypedRuleContext(dkParser.AddContext,0)


        def copy(self):
            return self.getTypedRuleContext(dkParser.CopyContext,0)


        def entrypoint(self):
            return self.getTypedRuleContext(dkParser.EntrypointContext,0)


        def volume(self):
            return self.getTypedRuleContext(dkParser.VolumeContext,0)


        def user(self):
            return self.getTypedRuleContext(dkParser.UserContext,0)


        def workdir(self):
            return self.getTypedRuleContext(dkParser.WorkdirContext,0)


        def arg(self):
            return self.getTypedRuleContext(dkParser.ArgContext,0)


        def onbuild(self):
            return self.getTypedRuleContext(dkParser.OnbuildContext,0)


        def stopsignal(self):
            return self.getTypedRuleContext(dkParser.StopsignalContext,0)


        def healthcheck(self):
            return self.getTypedRuleContext(dkParser.HealthcheckContext,0)


        def shell(self):
            return self.getTypedRuleContext(dkParser.ShellContext,0)


        def COMMENT(self):
            return self.getToken(dkParser.COMMENT, 0)

        def getRuleIndex(self):
            return dkParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = dkParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruction)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 80
                    self.from_()
                    pass
                elif token in [7]:
                    self.state = 81
                    self.run()
                    pass
                elif token in [8]:
                    self.state = 82
                    self.cmd()
                    pass
                elif token in [9]:
                    self.state = 83
                    self.label()
                    pass
                elif token in [10]:
                    self.state = 84
                    self.maintainer()
                    pass
                elif token in [11]:
                    self.state = 85
                    self.expose()
                    pass
                elif token in [12]:
                    self.state = 86
                    self.env()
                    pass
                elif token in [13]:
                    self.state = 87
                    self.add()
                    pass
                elif token in [14]:
                    self.state = 88
                    self.copy()
                    pass
                elif token in [15]:
                    self.state = 89
                    self.entrypoint()
                    pass
                elif token in [16]:
                    self.state = 90
                    self.volume()
                    pass
                elif token in [17]:
                    self.state = 91
                    self.user()
                    pass
                elif token in [18]:
                    self.state = 92
                    self.workdir()
                    pass
                elif token in [19]:
                    self.state = 93
                    self.arg()
                    pass
                elif token in [20]:
                    self.state = 94
                    self.onbuild()
                    pass
                elif token in [21]:
                    self.state = 95
                    self.stopsignal()
                    pass
                elif token in [22]:
                    self.state = 96
                    self.healthcheck()
                    pass
                elif token in [23]:
                    self.state = 97
                    self.shell()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 100
                self.match(dkParser.NEWLINE)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(dkParser.COMMENT)
                self.state = 103
                self.match(dkParser.NEWLINE)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.match(dkParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(dkParser.FROM, 0)

        def image_spec(self):
            return self.getTypedRuleContext(dkParser.Image_specContext,0)


        def platform_opt(self):
            return self.getTypedRuleContext(dkParser.Platform_optContext,0)


        def as_opt(self):
            return self.getTypedRuleContext(dkParser.As_optContext,0)


        def name_opt(self):
            return self.getTypedRuleContext(dkParser.Name_optContext,0)


        def getRuleIndex(self):
            return dkParser.RULE_from

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom" ):
                listener.enterFrom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom" ):
                listener.exitFrom(self)




    def from_(self):

        localctx = dkParser.FromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_from)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(dkParser.FROM)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 108
                self.platform_opt()


            self.state = 111
            self.image_spec()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 112
                self.as_opt()


            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 115
                self.name_opt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RUN(self):
            return self.getToken(dkParser.RUN, 0)

        def json_command(self):
            return self.getTypedRuleContext(dkParser.Json_commandContext,0)


        def shell_command(self):
            return self.getTypedRuleContext(dkParser.Shell_commandContext,0)


        def getRuleIndex(self):
            return dkParser.RULE_run

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun" ):
                listener.enterRun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun" ):
                listener.exitRun(self)




    def run(self):

        localctx = dkParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_run)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(dkParser.RUN)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.state = 119
                self.json_command()
                pass
            elif token in [51]:
                self.state = 120
                self.shell_command()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CMD(self):
            return self.getToken(dkParser.CMD, 0)

        def json_command(self):
            return self.getTypedRuleContext(dkParser.Json_commandContext,0)


        def shell_command(self):
            return self.getTypedRuleContext(dkParser.Shell_commandContext,0)


        def getRuleIndex(self):
            return dkParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)




    def cmd(self):

        localctx = dkParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(dkParser.CMD)
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.state = 124
                self.json_command()
                pass
            elif token in [51]:
                self.state = 125
                self.shell_command()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(dkParser.LABEL, 0)

        def label_pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dkParser.Label_pairContext)
            else:
                return self.getTypedRuleContext(dkParser.Label_pairContext,i)


        def getRuleIndex(self):
            return dkParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)




    def label(self):

        localctx = dkParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_label)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(dkParser.LABEL)
            self.state = 129
            self.label_pair()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 130
                self.label_pair()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaintainerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAINTAINER(self):
            return self.getToken(dkParser.MAINTAINER, 0)

        def ANY_CHAR_EXCEPT_NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(dkParser.ANY_CHAR_EXCEPT_NEWLINE)
            else:
                return self.getToken(dkParser.ANY_CHAR_EXCEPT_NEWLINE, i)

        def getRuleIndex(self):
            return dkParser.RULE_maintainer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaintainer" ):
                listener.enterMaintainer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaintainer" ):
                listener.exitMaintainer(self)




    def maintainer(self):

        localctx = dkParser.MaintainerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_maintainer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(dkParser.MAINTAINER)
            self.state = 138 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 137
                self.match(dkParser.ANY_CHAR_EXCEPT_NEWLINE)
                self.state = 140 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==51):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExposeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPOSE(self):
            return self.getToken(dkParser.EXPOSE, 0)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(dkParser.WORD)
            else:
                return self.getToken(dkParser.WORD, i)

        def getRuleIndex(self):
            return dkParser.RULE_expose

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpose" ):
                listener.enterExpose(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpose" ):
                listener.exitExpose(self)




    def expose(self):

        localctx = dkParser.ExposeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expose)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(dkParser.EXPOSE)
            self.state = 143
            self.match(dkParser.WORD)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 144
                self.match(dkParser.WORD)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENV(self):
            return self.getToken(dkParser.ENV, 0)

        def env_pair(self):
            return self.getTypedRuleContext(dkParser.Env_pairContext,0)


        def env_single(self):
            return self.getTypedRuleContext(dkParser.Env_singleContext,0)


        def getRuleIndex(self):
            return dkParser.RULE_env

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnv" ):
                listener.enterEnv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnv" ):
                listener.exitEnv(self)




    def env(self):

        localctx = dkParser.EnvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_env)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(dkParser.ENV)
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 151
                self.env_pair()
                pass

            elif la_ == 2:
                self.state = 152
                self.env_single()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(dkParser.ADD, 0)

        def path_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dkParser.Path_specContext)
            else:
                return self.getTypedRuleContext(dkParser.Path_specContext,i)


        def param_opt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dkParser.Param_optContext)
            else:
                return self.getTypedRuleContext(dkParser.Param_optContext,i)


        def getRuleIndex(self):
            return dkParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)




    def add(self):

        localctx = dkParser.AddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_add)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(dkParser.ADD)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 402653248) != 0):
                self.state = 156
                self.param_opt()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.path_spec()
            self.state = 163
            self.path_spec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CopyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COPY(self):
            return self.getToken(dkParser.COPY, 0)

        def path_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dkParser.Path_specContext)
            else:
                return self.getTypedRuleContext(dkParser.Path_specContext,i)


        def param_opt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dkParser.Param_optContext)
            else:
                return self.getTypedRuleContext(dkParser.Param_optContext,i)


        def getRuleIndex(self):
            return dkParser.RULE_copy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCopy" ):
                listener.enterCopy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCopy" ):
                listener.exitCopy(self)




    def copy(self):

        localctx = dkParser.CopyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_copy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(dkParser.COPY)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 402653248) != 0):
                self.state = 166
                self.param_opt()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.path_spec()
            self.state = 173
            self.path_spec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntrypointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTRYPOINT(self):
            return self.getToken(dkParser.ENTRYPOINT, 0)

        def json_command(self):
            return self.getTypedRuleContext(dkParser.Json_commandContext,0)


        def shell_command(self):
            return self.getTypedRuleContext(dkParser.Shell_commandContext,0)


        def getRuleIndex(self):
            return dkParser.RULE_entrypoint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrypoint" ):
                listener.enterEntrypoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrypoint" ):
                listener.exitEntrypoint(self)




    def entrypoint(self):

        localctx = dkParser.EntrypointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_entrypoint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(dkParser.ENTRYPOINT)
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [39]:
                self.state = 176
                self.json_command()
                pass
            elif token in [51]:
                self.state = 177
                self.shell_command()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VolumeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOLUME(self):
            return self.getToken(dkParser.VOLUME, 0)

        def json_array(self):
            return self.getTypedRuleContext(dkParser.Json_arrayContext,0)


        def shell_command_paths(self):
            return self.getTypedRuleContext(dkParser.Shell_command_pathsContext,0)


        def getRuleIndex(self):
            return dkParser.RULE_volume

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVolume" ):
                listener.enterVolume(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVolume" ):
                listener.exitVolume(self)




    def volume(self):
